# qualipy

./: .gitignore  .readthedocs.yaml  jira.sh  publish.sh  readme.md  requirements.txt
docs/: jira.md  requirements.txt  settings.md
docs/source/: conf.py  credentials.md  datamanagement.md  gettingstarted.md  index.rst  jira.md  settings.md
pytf/: .coveragerc  pyproject.toml
pytf-test/: pytf.yaml
pytf-test/steps/: example_steps.py
pytf/src/: pytf.py
pytf/src/PyTF.egg-info/: PKG-INFO  SOURCES.txt
pytf/src/authentication/: authenticator.py  keyring_authenticator.py
pytf/src/config/: __init__.py  app_config.py
pytf/src/exceptions/: app_exceptions.py
pytf/src/proj_mgmt_plugins/: jira_proj_mgmt_plugin.py  proj_mgmt_plugin.py
pytf/src/pytf/: __main__.py
pytf/src/pytf/config/: __init__.py  app_config.py
pytf/src/pytf/proj_mgmt_plugins/: jira_proj_mgmt_plugin.py
pytf/src/pytf/test_plugins/: behave_plugin.py  test_plugin.py
pytf/src/test_plugins/: behave_plugin.py  test_plugin.py
pytf/tests/: conftest.py
pytf/tests/authentication/: test_authenticator.py  test_keyring_authenticator.py
pytf/tests/config/: test_app_config.py  test_init.py
pytf/tests/exceptions/: test_app_exceptions.py
pytf/tests/proj_mgmt_plugins/: test_jira_proj_mgmt_plugin.py  test_proj_mgmt_plugin.py
qualipy/: .coveragerc  pyproject.toml  readme.md
qualipy-test/: environment.py  qualipy.yaml
qualipy-test/data_management/: custom_data_loader.py
qualipy-test/features/: example.feature
qualipy-test/models/: employee.py  task.py
qualipy-test/steps/: example_steps.py
(+46 files in other folders)
