[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyTF"
version = "0.0.1"
authors = [
  { name="Charles Morris", email="cmorris616@gmail.com" },
]
description = "Automated test process framework"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cmorris616/pytf"
"Bug Tracker" = "https://github.com/cmorris616/pytf/issues"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]